objects/docebo_v3__Course__c.object
<CustomObject>
    <description>Represents Docebo&apos;s courses</description>
    <fields>
        <fullName>docebo_v3__Catalog_Deeplink__c</fullName>
        <formula>IF(!ISBLANK(docebo_v3__Slug__c), &quot;?c__deeplink=/learn/course/internal/view/&quot; + LOWER (TEXT( docebo_v3__Type__c )) + &quot;/&quot; + TEXT(docebo_v3__CourseId__c) + &quot;/&quot; + docebo_v3__Slug__c, NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Catalog_Deeplink</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>docebo_v3__Code__c</fullName>
        <description>Course code</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>docebo_v3__CourseId__c</fullName>
        <description>LMS course Id</description>
        <externalId>true</externalId>
        <label>Course External Id</label>
        <precision>11</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>docebo_v3__CreationDate__c</fullName>
        <description>Creation datetime on the LMS</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Creation Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>docebo_v3__Deeplink__c</fullName>
        <formula>IF(!ISBLANK(docebo_v3__Slug__c), &quot;?c__deeplink=/learn/course/&quot; + TEXT(docebo_v3__CourseId__c) + &quot;/&quot; + docebo_v3__Slug__c, NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deeplink</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>docebo_v3__Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If the course has been deleted in the LMS</description>
        <label>Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>docebo_v3__DeletionDate__c</fullName>
        <description>Course deletion date (meaningful only when &quot;Deleted&quot; field is set to true)</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Deletion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>docebo_v3__Description__c</fullName>
        <description>Course description</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>docebo_v3__Effective__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If the course is effectively belonging to current LMS courses selection (or is part of second-hand seleciton, like belonging to some Learning Plan etc. )</description>
        <label>Effective</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>docebo_v3__Language__c</fullName>
        <defaultValue>&quot;english&quot;</defaultValue>
        <description>Course language code</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Language</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>docebo_v3__LastUpdateDate__c</fullName>
        <description>Course last update datetime</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Update Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>docebo_v3__Name__c</fullName>
        <description>Course name</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>docebo_v3__Slug__c</fullName>
        <description>The course name slug.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Slug</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>docebo_v3__Thumbnail__c</fullName>
        <description>Course LMS thumbnail url.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Thumbnail</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>docebo_v3__Type__c</fullName>
        <description>Course type</description>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Elearning</fullName>
                    <default>true</default>
                    <label>Elearning</label>
                </value>
                <value>
                    <fullName>Classroom</fullName>
                </value>
                <value>
                    <fullName>Webinar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Course</label>
    <listViews>
        <fullName>docebo_v3__All</fullName>
        <columns>NAME</columns>
        <columns>docebo_v3__CourseId__c</columns>
        <columns>docebo_v3__CreationDate__c</columns>
        <columns>docebo_v3__Name__c</columns>
        <columns>docebo_v3__Deleted__c</columns>
        <columns>docebo_v3__Effective__c</columns>
        <columns>docebo_v3__Slug__c</columns>
        <columns>docebo_v3__Thumbnail__c</columns>
        <columns>docebo_v3__Deeplink__c</columns>
        <columns>docebo_v3__DeletionDate__c</columns>
        <columns>docebo_v3__Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Course Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Courses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>